Fixed corporation industry unnecessarily centering vertically
This gave some weird situations where the main information was too far down when creating many products.

--- a/css/companymanagement.scss
+++ b/css/companymanagement.scss
@@ -63,6 +63,8 @@
   overflow: visible;
   top: 10px;
   width: 45%;
+  vertical-align: top;
+  margin-top: 10px;
 }
 
 .cmpy-mgmt-industry-overview-panel {
